add pagination to /users/staff and /users/clients
